# LocalTGEP

./: CMakeLists.txt  README.md
graph_data/: Email-Eu-Core.txt  Email-Eu-Core.txt.inc.txt
src/LocalTGEP_main/: controller.cpp  controller.h  global_graph.cpp  global_graph.h  graph.cpp  graph.hpp  local_p.cpp  local_p.h  main_LocalTGEP.cpp
src/graph_gen/: DivideG.cpp  DivideG.h  graph_gen.cpp  main_DivideG.cpp
src/util/: memory_monitor.cpp  memory_monitor.h  min_heap.hpp  util.cpp  util.h
src/vp2ep/: convert_vp_to_ep.cpp  edge_parts.cpp  edge_parts.h
